--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 display: flex;
                 flex-direction: column;
 
-                width: 400px;
+                width: 390px;
 
             }
 
@@ -129,11 +129,16 @@
                 flex-basis: auto;
                 flex-direction: column;
                
-                width: 400px;
+                width: 390px;
                
             }
             img{
                 align-items: center;
+                width: 100%;
+            }
+            .heading{
+                text-align: center;
+                font-size: 30px;
                 width: 100%;
             }
         }
