--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img height="300px" width="500px" src="covid-19-sleep-apnea.webp">
         </div>
         <div class="one-text">
-            <h1><a href="#">Co-relation between COVID-19 and Sleep Apnea: Concern for the patients</a></h1>
+            <h1><a href="first.html">Co-relation between COVID-19 and Sleep Apnea: Concern for the patients</a></h1>
             <p>The second outbreak of covid-19 is not only the cause of concern for the healthcare industry; it is
                 putting undue pressure on netizens also. This coronavirus is particularly ...</p>
             <button class="one-btn"><a href="first.html">Read More</a></button>
@@ -167,7 +167,7 @@
         <div class="two">
 
             <div class="two-text">
-                <h1><a href="#">Co-relation between COVID-19 and Sleep Apnea: Concern for the patients</a></h1>
+                <h1><a href="second.html">Co-relation between COVID-19 and Sleep Apnea: Concern for the patients</a></h1>
                 <p>The second outbreak of covid-19 is not only the cause of concern for the healthcare industry; it is
                     putting undue pressure on netizens also. This coronavirus is particularly ...</p>
                 <button class="two-btn"><a href="second.html">Read More</a></button>
@@ -182,7 +182,7 @@
             <img height="300px" width="500px" src="ResMed-blog-ways-to-protect-yourself.webp">
         </div>
         <div class="one-text">
-            <h1><a href="#"> Ways to protect yourself from coronavirus when you’re in public</a></h1>
+            <h1><a href="third.html"> Ways to protect yourself from coronavirus when you’re in public</a></h1>
             <p>Are you also thinking about when we will go out of this dangerous outbreak of coronavirus second strain?
                 Well, no one knows when we will be safe in the outside world. However, ...</p>
             <button class="one-btn"><a href="third.html">Read More</a></button>
@@ -191,7 +191,7 @@
     <div class="two">
 
         <div class="two-text">
-            <h1><a href="#">Coronavirus second wave: How does sleep affect mental health?</a></h1>
+            <h1><a href="fourth.html">Coronavirus second wave: How does sleep affect mental health?</a></h1>
             <p>Are you also feeling overwhelmed with the number of cases rising each day, near and dear ones getting
                 affected? Stress and anxiety have become very common in coronavirus second ...</p>
             <button class="two-btn"><a href="fourth.html">Read More</a></button>
@@ -205,7 +205,7 @@
             <img height="300px" width="500px" src="ResMed-Coronavirus.jpeg">
         </div>
         <div class="one-text">
-            <h1><a href="#">Some lesser-known symptom of new coronavirus symptoms</a></h1>
+            <h1><a href="fifth.html">Some lesser-known symptom of new coronavirus symptoms</a></h1>
             <p>As we know India is facing a spike in COVID-19 cases in the year 2021, named as the second wave of
                 coronavirus symptoms. Experts say that people need to be more careful this time, ...</p>
             <button class="one-btn"><a href="fifth.html">Read More</a></button>
@@ -214,7 +214,7 @@
     <div class="two">
 
         <div class="two-text">
-            <h1><a href="#">Corona Virus Second Wave: How to stay safe in the 2nd corona wave</a></h1>
+            <h1><a href="sixth.html">Corona Virus Second Wave: How to stay safe in the 2nd corona wave</a></h1>
             <p>Many countries including India eased the lockdown way before the second wave of Corona Virus hit the
                 world. However, people have been facing COVID-19 for a year now. Apart from ...</p>
             <button class="two-btn"><a href="sixth.html">Read More</a></button>
@@ -228,7 +228,7 @@
             <img height="300px" width="500px" src="volunteer-helping-older-people.webp">
         </div>
         <div class="one-text">
-            <h1><a href="#">Taking care of the elderly during COVID 19 Pandemic</a></h1>
+            <h1><a href="seventh.html">Taking care of the elderly during COVID 19 Pandemic</a></h1>
             <p>The greatest of all learnings during this pandemic has been the lost respect for human lives. Amidst this
                 chaos, there is the peace that some of us are there with our families to ...</p>
             <button class="one-btn"><a href="seventh.html">Read More</a></button>
